--- a/index.html
+++ b/index.html
@@ -165,7 +165,44 @@
 
         </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <div class="footer-div1"> 
+            <img class="img-f1" src="images/image 1.svg" alt="">
+            <p class="footer-p1">Lorem ipsum dolor sit amet consectetur. Mi nibh venenatis in suscipit turpis enim cursus vulputate amet. Lobortis mi platea aliquam senectus tempus mauris neque.</p>
+            <img class="footer-icon" src="images/ic_baseline-facebook.svg" alt="">
+            <img class="footer-icon1" src="images/ph_instagram-logo-fill.svg" alt="">
+            <img class="footer-icon2" src="images/entypo-social_linkedin-with-circle.svg" alt="">
+        </div>
+        <div class="footer-div2">
+            <h2 class="footer-text1">Website Links</h2>
+            <h4 class="footer-text2">Home</h4>
+            <h4 class="footer-text3">About</h4>
+            <h4 class="footer-text4">Get in touch</h4>
+
+        </div>
+        <div class="footer-div3">
+            <div class="div11 activ">
+                <h2 class="div3-text1">Services</h2>
+            </div>
+            <div class="div11">
+                <h4 class="div3-text2">Asset Vault</h4>
+            </div>
+            <div class="div11">
+                <h4 class="div3-text3">Emotional Will</h4>
+            </div>
+            <div class="div11">
+                <h4 class="div3-text3">Time Capsule</h4>
+            </div>
+
+        </div>
+        <div class="footer-div4">
+            <h2 class="div4-text1">Languages</h2>
+            <div class="langv-style">
+                <h4 class="div4-text2">English</h4>
+            </div>
+
+        </div>
+    </footer>
     
 </body>
 </html>
